--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "hack": "concurrently \"yarn hack:server\" \"yarn hack:client\"",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "seed": "node data/import.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
