--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "rollback": "npx knex --knexfile ./knexfile.js migrate:rollback"
   },
   "dependencies": {
+    "apollo-server-express": "^2.23.0",
     "axios": "^0.21.0",
+    "chai-http": "^4.3.0",
     "core-js": "^3.7.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
     "knex": "^0.21.12",
+    "mocha": "^8.3.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "vue": "^2.6.12",
@@ -37,7 +42,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.1.1",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "concurrently": "^5.3.0",
     "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
