Fetch request succesful in html

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server",
     "hack:client": "vue-cli-service serve",
     "hack:server": "nodemon server",
-    "hack": "concurrently \"yarn hack:server\" \"yarn hack:client\"",
+    "hack": "concurrently \"hack:server\" \"hack:client\"",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
@@ -21,6 +21,7 @@
     "axios": "^0.21.0",
     "chai-http": "^4.3.0",
     "core-js": "^3.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
