--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project.continuous-delivery-vue",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "scripts": {
     "start": "node server",
