--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
   "name": "project.continuous-delivery-vue",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "scripts": {
     "start": "node server",
     "hack:client": "vue-cli-service serve",
     "hack:server": "nodemon server",
-    "hack": "concurrently \"yarn hack:server\" \"yarn hack:client\"",
+    "hack": "concurrently \"hack:server\" \"hack:client\"",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "makeSeed": "npx knex --knexfile ./knexfile.js seed:make",
+    "seed": "npx knex --knexfile ./knexfile.js seed:run",
+    "makeMigration": "npx knex --knexfile ./knexfile.js migrate:make ",
+    "migrate": "npx knex --knexfile ./knexfile.js migrate:latest",
+    "rollback": "npx knex --knexfile ./knexfile.js migrate:rollback"
   },
   "dependencies": {
+    "apollo-server-express": "^2.23.0",
     "axios": "^0.21.0",
+    "chai-http": "^4.3.0",
     "core-js": "^3.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
     "knex": "^0.21.12",
+    "mocha": "^8.3.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "vue": "^2.6.12",
@@ -32,16 +46,13 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.1.1",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "concurrently": "^5.3.0",
     "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
     "lint-staged": "^10.5.1",
     "nodemon": "^2.0.6",
     "vue-template-compiler": "^2.6.12"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.js": [
