--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "seed": "npx knex --knexfile ./knexfile.js seed:run",
     "makeMigration": "npx knex --knexfile ./knexfile.js migrate:make ",
     "migrate": "npx knex --knexfile ./knexfile.js migrate:latest",
-    "rollback": "npx knex --knexfile ./knexfile.js migrate:rollback"
+    "rollback": "npx knex --knexfile ./knexfile.js migrate:rollback",
+    "test" : "mocha server/servertest.js"
   },
   "dependencies": {
     "apollo-server-express": "^2.23.0",
     "axios": "^0.21.0",
-    "chai-http": "^4.3.0",
     "core-js": "^3.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -31,7 +31,6 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "knex": "^0.21.12",
-    "mocha": "^8.3.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "vue": "^2.6.12",
@@ -47,10 +46,12 @@
     "@vue/test-utils": "^1.1.1",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
     "lint-staged": "^10.5.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.6",
     "vue-template-compiler": "^2.6.12"
   },
