--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "makeMigration": "npx knex --knexfile ./knexfile.js migrate:make ",
     "migrate": "npx knex --knexfile ./knexfile.js migrate:latest",
     "rollback": "npx knex --knexfile ./knexfile.js migrate:rollback",
-    "test" : "mocha server/servertest.js"
+    "test": "mocha server/servertest.js"
   },
   "dependencies": {
     "apollo-server-express": "^2.23.0",
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "heroku": "^7.53.0",
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
